<resources>
    <string name="app_name">Bookmark Keywords</string>
    <string name="error_keyword_not_found">Keyword not found.</string>
    <string name="error_compatible_app_not_found">No app found to handle this URI.</string>
    <string name="btn_go">Go</string>
    <string name="input_hint_query">query</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bookmark Keywords</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_go">Go</string>
    <string name="menu_list">List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button_description_add_bookmark">Add a new bookmark</string>
    <string name="input_hint_name">name</string>
    <string name="input_hint_url_template">URL template</string>
    <string name="input_hint_keyword">keyword</string>
    <string name="button_save">save</string>
    <string name="help_placeholders">Use %s as a placeholder.</string>
    <string name="bookmark_deleted">Bookmark deleted.</string>
    <string name="error_database_not_found">Database not found</string>
    <string name="error_no_rows_updated">No rows were inserted or updated.</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="date_format">yyyy-MM-dd_hh-mm-ss</string>
    <string name="export_suffix">_bookmark_keywords.csv</string>
    <string name="toast_export_ok">Bookmarks exported.</string>
    <string name="toast_export_cancelled">Export cancelled.</string>
    <string name="toast_import_ok">%d bookmarks found, %d new bookmarks imported.</string>
    <string name="toast_import_cancelled">Import cancelled.</string>
</resources>