<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_go"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_go" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list" />
    </group>
    <group
        android:id="@+id/menu_buttons"
        android:checkableBehavior="none">
        <item
            android:id="@+id/btn_export"
            android:icon="@drawable/ic_export"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/btn_import"
            android:icon="@drawable/ic_import"
            android:title="@string/menu_import" />
    </group>
</menu>